--- a/bootstrapzero/index.html
+++ b/bootstrapzero/index.html
@@ -71,8 +71,8 @@
         <div class="container">
             <div class="row">
                 <ul>
-                    <li><img src="images/01.png" alt="" class="col-lg-5 col-md-5 col-s-12 col-xs-12">
-                        <div class="col-lg-7 col-md-7 col-s-12 col-xs-12">
+                    <li><img src="images/01.png" alt="" class="col-lg-5 col-md-5 col-s-12 col-xs-12 ">
+                        <div class="col-lg-7 col-md-7 col-s-12 col-xs-12 fl">
                             <h1>
                                 Download hundreds of free and premium bootstrap themes
                                 and templates
@@ -456,6 +456,11 @@
             </div>
         </div>
     </div>
+    <!-- 给页面添加阴影效果 -->
+    <div class="shadow">
+        
+    </div>
+    
 </body>
 <script src="js/jQuery.min.js"></script>
 <script src="js/index.js"></script>
